# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "vumeter_usb"
version = "1.0.0"


[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7"
embedded-hal = "1"
# fugit = "0.3"
panic-halt = "1"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-time = "2"
rtic-monotonics = { version = "2", features = ["stm32f411ce", "stm32_tim2"] }
stm32f4xx-hal = { version = "0.22", features = ["stm32f411", "usb_fs"] }
stm32-usbd = "0.7"
usb-device = "0.3"
usbd-serial = "0.2"


# this lets you use `cargo fix`!
[[bin]]
name = "vumeter_usb"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = false
lto = "fat"

[profile.dev]
opt-level = 'z'
codegen-units = 1
debug = false
lto = true

# EOF
